--- a/tools/.env.example
+++ b/tools/.env.example
@@ -1,12 +1,12 @@
 # RATE LIMITS AND OTHERS
 DISCORD_INVITE_RATE_LIMIT=40
 DISCORD_USERS_RATE_LIMIT=20
-VIRUSTOTAL_RATE_LIMIT=4
+URLSCAN_RATE_LIMIT=4
 IPINFO_RATE_LIMIT=4
 # DOMAIN FILTER
 EXCLUDED_DOMAINS=discord.com,discord.gg,steamcommunity.com,funpay.com,mediafire.com,t.me
 # TOKENS
-VIRUSTOTAL_API_TOKEN=YOUR_VIRUSTOTAL_TOKEN
+URLSCAN_API_TOKEN=YOUR_VIRUSTOTAL_TOKEN
 IPINFO_API_TOKEN=YOUR_IPINFO_TOKEN
 DISCORD_TOKEN=YOUR_BOT_TOKEN
 CLIENT_ID=YOUR_BOT_CLIENT_ID
