--- a/tools/.env.example
+++ b/tools/.env.example
@@ -4,7 +4,7 @@ DISCORD_USERS_RATE_LIMIT=20
 URLSCAN_RATE_LIMIT=4
 IPINFO_RATE_LIMIT=4
 # DOMAIN FILTER
-EXCLUDED_DOMAINS=discord.com,discord.gg,steamcommunity.com,funpay.com,mediafire.com,t.me
+EXCLUDED_DOMAINS=UNKNOWN,discord.com,discord.gg,steamcommunity.com,funpay.com,mediafire.com,t.me
 # TOKENS
 URLSCAN_API_TOKEN=YOUR_VIRUSTOTAL_TOKEN
 IPINFO_API_TOKEN=YOUR_IPINFO_TOKEN
