Updated example .env file

--- a/tools/.env.example
+++ b/tools/.env.example
@@ -1,12 +1,26 @@
-# RATE LIMITS AND OTHERS
-DISCORD_INVITE_RATE_LIMIT=40
-DISCORD_USERS_RATE_LIMIT=20
-URLSCAN_RATE_LIMIT=4
+# URLSCAN.IO API TOKEN
+URLSCAN_API_TOKEN=TOKEN
+# URLSCAN.IO API RATE LIMIT
+URLSCAN_RATE_LIMIT=8
+
+# IPINFO.IO API TOKEN
+IPINFO_API_TOKEN=TOKEN
+# IPINFO.IO API RATE LIMIT
 IPINFO_RATE_LIMIT=4
-# DOMAIN FILTER
-EXCLUDED_DOMAINS=UNKNOWN,discord.com,discord.gg,steamcommunity.com,funpay.com,mediafire.com,t.me
-# TOKENS
-URLSCAN_API_TOKEN=YOUR_VIRUSTOTAL_TOKEN
-IPINFO_API_TOKEN=YOUR_IPINFO_TOKEN
-DISCORD_TOKEN=YOUR_BOT_TOKEN
-CLIENT_ID=YOUR_BOT_CLIENT_ID
+
+# VIRUSTOTAL API TOKEN
+VIRUSTOTAL_API_TOKEN=TOKEN
+# VIRUSTOTAL API RATE LIMIT
+VIRUSTOTAL_RATE_LIMIT=4
+
+# DISCORD BOT TOKEN
+DISCORD_TOKEN=TOKEN
+# DISCORD BOT ID
+CLIENT_ID=ID
+# DISCORD API INVITES ENDPOINT RATE LIMIT
+DISCORD_INVITE_RATE_LIMIT=20
+# DISCORD API USERS ENDPOINT RATE LIMIT
+DISCORD_USERS_RATE_LIMIT=20
+
+# DOMAIN FILTERS
+EXCLUDED_DOMAINS=UNKNOWN,discord.com,discord.gg,steamcommunity.com,funpay.com,mediafire.com,t.me,telegra.ph,telegram.com
