Updated bot to use custom wordlist

--- a/tools/.env.example
+++ b/tools/.env.example
@@ -21,6 +21,8 @@ CLIENT_ID=ID
 DISCORD_INVITE_RATE_LIMIT=20
 # DISCORD API USERS ENDPOINT RATE LIMIT
 DISCORD_USERS_RATE_LIMIT=20
+# DISCORD BOT WORD LIST
+WORD_LIST=WORD1,WORD2,WORD3
 
 # DOMAIN FILTERS
 EXCLUDED_DOMAINS=UNKNOWN,discord.com,discord.gg,steamcommunity.com,funpay.com,mediafire.com,t.me,telegra.ph,telegram.com
