--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /.idea
 tools/.env
 idea.txt
+tools/bot/cogs/__pycache__/setup.cpython-39.pyc
+tools/bot/cogs/__pycache__/monitor.cpython-39.pyc
+tools/bot/cogs/__pycache__/__init__.cpython-39.pyc
+tools/bot/utils/__pycache__/__init__.cpython-39.pyc
+tools/bot/utils/__pycache__/config.cpython-39.pyc
+tools/bot/utils/__pycache__/csv_handler.cpython-39.pyc
+tools/bot/utils/__pycache__/logging.cpython-39.pyc
