--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ tools/bot/utils/__pycache__/config.cpython-39.pyc
 tools/bot/utils/__pycache__/csv_handler.cpython-39.pyc
 tools/bot/utils/__pycache__/logging.cpython-39.pyc
 tools/bot/cogs/__pycache__/info.cpython-39.pyc
+tools/bot/config/wordlist.json
