--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ tools/bot/cogs/__pycache__/info.cpython-39.pyc
 tools/bot/config/wordlist.json
 tools/bot/cogs/__pycache__/rich_presence.cpython-39.pyc
 tools/bot/.env
+tools/bot/cogs/__pycache__/reset.cpython-39.pyc
