--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ tools/bot/cogs/__pycache__/announcer.cpython-39.pyc
 tools/bot/cogs/__pycache__/help.cpython-39.pyc
 tools/bot/cogs/__pycache__/support.cpython-39.pyc
 tools/bot/bot_to_do_list.txt
+tools/bot/utils/__pycache__/decorators.cpython-39.pyc
