added stats bot

--- a/tools/statistics_app/.env.example
+++ b/tools/statistics_app/.env.example
@@ -1,4 +1,5 @@
-# DISCORD BOT TOKEN
-DISCORD_TOKEN=TOKEN
-# DISCORD BOT ID
-CLIENT_ID=ID
+# Discord Bot Configuration
+GUILD_ID=YOUR_GUILD_ID_HERE
+BOT_TOKEN=YOUR_BOT_TOKEN_HERE
+APP_ID=YOUR_APPLICATION_ID_HERE
+CATEGORY_ID=YOUR_CATEGORY_ID_HERE
