--- a/tools/.env.example
+++ b/tools/.env.example
@@ -24,3 +24,9 @@ DISCORD_USERS_RATE_LIMIT=20
 
 # DOMAIN FILTERS
 EXCLUDED_DOMAINS=UNKNOWN,discord.com,discord.gg,steamcommunity.com,funpay.com,mediafire.com,t.me,telegra.ph,telegram.com
+
+# PROXIES (CHOOSE ANY OF THE FOLLOWING)
+PROXY_URL=https://api.codetabs.com/v1/proxy/?quest=
+# PROXY_URL=https://corbypass.com/?
+# PROXY_URL=https://thingproxy.freeboard.io/fetch/
+# PROXY_URL=https://api.allorigins.win/get?url=
