--- a/tools/.env.example
+++ b/tools/.env.example
@@ -23,7 +23,7 @@ DISCORD_INVITE_RATE_LIMIT=20
 DISCORD_USERS_RATE_LIMIT=20
 
 # DOMAIN FILTERS
-EXCLUDED_DOMAINS=UNKNOWN,discord.com,discord.gg,steamcommunity.com,funpay.com,mediafire.com,t.me,telegra.ph,telegram.com
+EXCLUDED_DOMAINS=UNKNOWN,discord.com,discord.gg,steamcommunity.com,funpay.com,mediafire.com,t.me,t.co,telegra.ph,telegram.com
 
 # PROXIES (CHOOSE ANY OF THE FOLLOWING)
 PROXY_URL=https://api.codetabs.com/v1/proxy/?quest=
